# skellyclicker

./: .gitignore  README.md  pyproject.toml  skellyclicker_env.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
skellyclicker/: __init__.py
skellyclicker/api/: __init__.py  __main__.py  app.py
skellyclicker/core/: human_labels_io.py  session_validation.py
skellyclicker/services/: __init__.py  dialog_errors.py  dlc_paths.py  (+21 more)
test/: test_align_label_video_names.py  test_data_handler_active_point.py  test_data_handler_save_csv.py  test_dlc_csv_io.py  test_dlc_iteration.py  test_dlc_paths.py  test_dlc_predictions_to_skellyclicker.py  test_dlc_progress.py  test_dlc_session_name.py  test_external_hud.py  test_grid_parameters_native.py  test_health_debug.py  test_human_label_cursor.py  test_human_label_frames.py  test_human_labels_io.py  test_human_labels_merge.py  test_incomplete_frame_gate.py  test_label_nav_frames.py  test_labeled_data_io.py  test_labeler_native_resolution.py  test_labeler_open_performance.py  test_labeling_active_point.py  test_labeling_contrast.py  test_labeling_engine_preview.py  test_labeling_mode.py  test_labeling_nav_frames.py  test_labeling_review.py  test_live_inference.py  test_live_overlay_toggle.py  test_low_confidence.py  test_machine_labels_patch.py  test_native_dialog.py  test_overlay_scale.py  test_parallel_analyze.py  test_performance_sample.py  test_sample_frames_sidecar.py  test_session_paths.py  test_session_store.py  test_upload_store.py  test_video_grid_zero_size.py  (+3 more)
(+30 files in other folders)
