[project]
name = "skellyclicker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorbrewer>=0.3",
    "deeplabcut==3.0.0rc13",
    "fastapi>=0.115.0",
    "numpy==1.26.2",
    "opencv-contrib-python>=4.8.1.78",
    "pandas==2.1.4",
    "pillow>=11.1.0",
    "pydantic==2.11.0",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

[project.scripts]
skellyclicker-web = "skellyclicker.api.__main__:main"
